--- a/src/App.css
+++ b/src/App.css
@@ -27,16 +27,18 @@ section{
 }
 
 .card{
-  width: 300px;
-  height: 260px;
+  width: 250px;
+  height: 250px;
   background: #18305a;
   color: #fff;
-  padding: 40px;
-  margin: 16px 0;
+  padding: 30px;
+  margin: 5px;
+  text-align: center;
+  display: inline-table;
 }
 
 .card h1{
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .card a{
