--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,11 @@ section{
   margin: auto;
 }
 
-.hero{
+.display{
   background: #445688;
 }
 
-.hero .container{
+.display .container{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
