--- a/src/App.css
+++ b/src/App.css
@@ -88,5 +88,19 @@ section{
   font-size: 20px;
   font-weight: 500;
   border-radius: 4px ;
+}
 
+.circle {
+  border-radius: 50%;
+  font-weight: 900;
+  display: inline-block;
+  background-color: darkgrey;
+  width: 100px;
+  height: 100px;
+  padding: 25px;
+  /* //background: #fff; */
+  border: 5px solid #000;
+  color: #fff;
+  text-align: center;
+  font: 50px Arial, sans-serif;
 }
